src/test/ui/consts/const-eval/simd/insert_extract-fail.stderr
error: any use of this value will cause an error
  --> $DIR/insert_extract-fail.rs:14:14
   |
LL |     unsafe { simd_insert(x, 0_u32, 42_i16) }.0
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |              |
   |              Inserting `i16` with size `2` to a vector element place of size `1`
   |              inside call to `foo` at $DIR/insert_extract-fail.rs:19:19
...
LL |     const X: i8 = foo(V);
   |     ---------------------
   |
   = note: `#[deny(const_err)]` on by default

error: aborting due to previous error

